first pass at 1.21 update for this